TEST : 로또 번호 생성에 대한 테스트 코드 수정
// 로또번호 오름차순 정렬 테스트에 대한 오류 발생

- 기존 : expected.add(List.of(1,2,4,3,5,6));
- 수정 : expected.add(new ArrayList<>(Arrays.asList(1,2,3,4,5,6)));
>> List.of() 는 불변의 리스트(immutable) 이다.
>> Collections.sort() 를 사용했지만 리스트 List.of 로 선언한 리스트는 불가능.
>> 대신 ArrayList 로 선언해서 리스트 변경이 가능하도록 변경